Fix garbled colors when scaling indexed-color images

Fixes bug where indexed-color or monochrome-palette images (eg. from
pngquant) would render with garbled colors or B&W noise when zoomed.

I converted images from indexed colors to (A)RGB32, to avoid error
"Gwenview cannot apply color profile on QImage::... images" (depending
on zoom level).

I verified that wide-gamut images (Webkit-logo-P3.png) are still clipped
to SDR gamut. I tested that wide-gamut indexed images are now properly
clipped, but these images are probably ahistorical.

Bug introduced by commit 33d6203c7b4de83a8a1ea92dfc7036af87eb43f2.
BUG: 459627